@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/22
+	* Corrected setitemscript not correctly updating the item's script.
 	* Added define MAX_CHARS so you can easily mod the server to support a
 	  different amount of characters per account (however, there is still the
 	  issue of hexing the client to support this change)
